# CustodialEthereumWallet

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  alembic.ini  logging.prod.yml  logging.yml  pyproject.toml
entrypoints/: start_dev.sh  start_prod.sh  start_scanner.sh  start_worker_scanner.sh
gunicorn/: gunicorn.conf.py
migrations/: env.py
migrations/versions/: 2023-11-30_5d85d3b7b718_init.py  2023-11-30_8ae4705f92b3_init.py  2023-11-30_b70b6a935685_init.py  2023-12-02_6902df372906_init.py  2023-12-02_6b851f5d0314_init.py  2023-12-02_6e7864049002_init.py  2023-12-02_7397001d28c1_init.py
src/: main.py  scanner.py
src/celery/: config.py
src/core/: base.py  config.py  exceptions.py  logger.py  middlewares.py  utils.py
src/database/: base.py  engine.py  metadata.py  redis.py  utils.py
src/modules/scanner/: router.py  service.py  tasks.py  utils.py
src/modules/transactions/: enums.py  exceptions.py  models.py  router.py  service.py  utils.py
src/modules/wallets/: dao.py  dependencies.py  enums.py  exceptions.py  models.py  router.py  schemas.py  service.py  utils.py
